# aux_files_ms_thesis

fruit_counting_backend/: CMakeLists.txt  package.xml
fruit_counting_backend/src/: Fruit.cpp  Fruit.h  FruitMap.cpp  FruitMap.h  fruit_counting_gtsam_basic.cpp  sandbox.cpp  visualSLAMExample.cpp
fruit_couting_base/: CMakeLists.txt  README.md
fruit_couting_base/launch/: tree_fruits_depth_camera.launch  tree_fruits_stereo_camera.launch
fruit_couting_base/msg/: vecPoints.msg
fruit_couting_base/rviz/: fruit_counting_base.rviz
fruit_couting_base/scripts/: camera_circular_trajectory.py  depth_camera_circular_trajectory.py
fruit_couting_base/src/: Utils.h  camera_pose_publisher_node.cpp  depthUtils.h  fruit_per_image_node.cpp  fruits_per_image_node_with_message_filters.cpp  ros_callbacks.h
fruit_couting_base/worlds/: tree_with_depth_camera.world  tree_with_fruits.world  tree_with_stereo_camera.world
